--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "apollo-link-state": "^0.4.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "isomorphic-fetch": "^2.2.1",
+    "next": "^6.0.3",
     "npm": "^6.1.0",
     "react": "^16.4.1",
+    "react-apollo": "^2.1.5",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
     "to": "^0.2.9",
